# attos_pixoo64

./: .gitignore  Cargo.toml  Dockerfile
api/: Cargo.toml
api/src/: daily.rs
app/: Cargo.toml
app/src/: config.rs  consts.rs  errors.rs  lib.rs  main.rs  news_api.rs  pixoo_api.rs  types.rs
app/src/api/: mod.rs  pixoo_api.rs  weather_api.rs
app/src/models/: mod.rs  news_response.rs  send_animation.rs  send_display_list.rs  weather_response.rs
app/src/services/: animation.rs  clock.rs  hoyolab.rs  mod.rs  news.rs  text.rs
hoyo_api/: Cargo.toml
hoyo_api/src/: game_record.rs  lib.rs  utils.rs
hoyo_api/src/models/zzz/: game_record.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
