[workspace]
resolver = "2"
members = [
  "./api",
  "./scheduler",
  "./app",
]

[workspace.dependencies]
api = { path = "api" }
app = { path = "app" }
scheduler = { path = "scheduler" }

async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
config = "0.15"
env_logger = "0.11"
futures = "0.3"
gif = "0.13"
log = "0.4"
md5 = "0.7"
once_cell = "1.21"
phf = "0.11"
rand = "0.9"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.12"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
tokio = "1.44"
tokio-util = "0.7"
